--- a/config/crd/bases/nifi.konpyutaika.com_nificlusters.yaml
+++ b/config/crd/bases/nifi.konpyutaika.com_nificlusters.yaml
@@ -8275,6 +8275,10 @@ spec:
           status:
             description: NifiClusterStatus defines the observed state of NifiCluster
             properties:
+              certificateExpireDate:
+                description: Certificate expire date contains the date when the certificate
+                  should be renewed
+                type: string
               nodesState:
                 additionalProperties:
                   description: NifiState holds information about nifi state
